Bugzilla  Bug 289136 - Use p2 to manage and run on other OSGi framework implementations